--- a/css/breakpoint_mobil.css
+++ b/css/breakpoint_mobil.css
@@ -9,9 +9,7 @@
         flex-direction: row;
         justify-content: space-around;
         padding-bottom: 60px;
-       
-
-    }
+     }
 
    .header img
     {
@@ -21,15 +19,11 @@
       left: 10px;
       height: 40px;
     }
-
-
     .disposition_Nav  
    {
     display: flex;
     list-style-type: none;
-    font-size: 13px;
-    padding-bottom: 60px;
-   
+    padding-bottom: 60px;  
    }
 
    .position_log_in
@@ -37,7 +31,7 @@
         position: absolute;
         top: 0;
         right: 10px;
-        font-size: 13.5px;
+        font-size: 14.5px;
         font-weight: 800;
         color: blue;
         
@@ -47,24 +41,29 @@
 
    .position_activity
    {
-        border-bottom: 3px solid #0065FC;
+        border-bottom: 3px solid #F2F2F2;
         border-top: none;
         position: absolute;
-        top: 30px;
-        right: 85px;
+        top: 50px;
+        right: 8px;
+        font-size: 17px;
+        padding-left: 50px;
+        padding-right: 60px;
+        
    }
 
    .position_accomodation
    {
-        border-bottom: 3px solid #F2F2F2;
+        border-bottom: 3px solid #0065FC;
         border-top: none;
         position: absolute;
-        top: 30px;
-        left: 85px;
+        top: 50px;
+        left: 10px;
+        font-size: 17px;
+        padding-left: 20px;
+        padding-right: 41px;
 
     }
-
-  
     
     section
     {
@@ -76,14 +75,15 @@
 
     .title
     {
-         margin-bottom: 6px;
          margin: 10px;
+         margin-top: 0;
 
     }
 
     h1 
     {
         font-size: 25px;
+        margin-top: 0;
         
     }
 
